tests/typing/bad/testfile-nil-5.go
package main
func f() bool { var b = nil == nil; return b }
func main() { }
